# orbit

./: .gitignore  LICENSE  README.md  build_release.ps1  start_agent.bat
.github/: FUNDING.yml
.github/workflows/: release.yml
agent/: install-autostart.ps1  orbit.spec  pyproject.toml  requirements.txt  rthook_coinit.py  start-orbit-hidden.vbs  uninstall-autostart.ps1
agent/src/: main.py  paths.py  tray.py
agent/src/core/: icon_extractor.py  input_emulator.py  system_controls.py
agent/src/db/: database.py  models.py  scenario_models.py
frontend/: index.html  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/assets/: main.css
frontend/src/components/: AudioPlayer.tsx  ConnectBanner.tsx  Navbar.tsx  OnScreenKeyboard.tsx  Onboarding.tsx  PairingFlow.tsx  Portal.tsx  ScreenHeader.tsx  Skeleton.tsx  VerticalSlider.tsx
frontend/src/constants/: index.ts
frontend/src/features/control/: ClipboardPanel.tsx  useBrightness.ts  useClipboard.ts  useNotification.ts  useVolume.ts
frontend/src/features/dashboard/: AppPicker.tsx  DashboardTab.tsx  OsHeroCard.tsx  PinTile.tsx  WakeOnLanSheet.tsx  useAppIcon.ts  useOsCardVisibility.ts  usePinnedApps.ts
frontend/src/features/files/: FilesTab.tsx
frontend/src/features/macros/: MacrosTab.tsx
frontend/src/features/mouse/: MouseTab.tsx
frontend/src/hooks/: usePing.ts  useScreenPreview.ts  useTouchpad.ts  useWebSocket.ts
frontend/src/lib/: haptics.ts
frontend/src/state/: OrbitContext.tsx
frontend/src/types/: index.ts
(+34 files in other folders)
