[tool.poetry]
name = "orbit-agent"
version = "1.0.0"
description = "Orbit Windows Remote Control Agent"
authors = ["yovrah"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pynput = "^1.7.6"
zeroconf = "^0.131.0"
pycaw = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
